--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,36 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Data
+*.dta
+*.csv
+*.xlsx
+*.xls
+*.mat
+*.npz
+*.pkl
+*.parquet
+
+# Logs & Temp
+*.log
+*.gph
+*.smcl
+
+# Python cache
+__pycache__/
+.ipynb_checkpoints/
+*.pyc
+
+# LaTeX
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.out
+*.toc
+*.synctex.gz
+*.pdf
+
+# OS
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
